New TractoFlow pipeline uses SH input signal

--- a/nextflow.config
+++ b/nextflow.config
@@ -12,56 +12,14 @@ process {
 
 params {
 
-    //*BIDS options**//
-        participants_label=false
-        clean_bids=false
-
     //**Global options**//
         b0_thr_extract_b0=10
         dwi_shell_tolerance=20
 
-    //**Preliminary DWI brain extraction**//
-        dilate_b0_mask_prelim_brain_extraction=5
-        bet_prelim_f=0.16
+    //SF from SH
+        sh_basis="descoteaux07"
+        sphere="repulsion724"
 
-    //**Denoise dwi (dwidenoise in Mrtrix3)**//
-        run_dwi_denoising=true
-        extent=7
-
-    //**Topup**//
-        run_topup=true
-        config_topup="b02b0.cnf"
-        encoding_direction="y"
-        readout=0.062
-        prefix_topup="topup_results"
-
-    //**Eddy**//
-        run_eddy=true
-        eddy_cmd="eddy_openmp"
-        bet_topup_before_eddy_f=0.16
-        use_slice_drop_correction=true
-
-    //**Final DWI BET**//
-        bet_dwi_final_f=0.16
-
-    //**Denoise T1**//
-        run_t1_denoising=true
-
-    //**Resample T1**//
-        run_resample_t1=true
-        t1_resolution=1
-        t1_interpolation="lin"
-
-    //**Normalize DWI**//
-        fa_mask_threshold=0.4
-
-    //**Resample DWI**//
-        run_resample_dwi=true
-        dwi_resolution=1
-        dwi_interpolation="lin"
-
-    //**Segment tissues**//
-        number_of_tissues=3
 
     //**Compute fiber response function (frf)**//
         fa=0.7
@@ -76,7 +34,7 @@ params {
 
     //**Compute fODF metrics**//
         sh_order=8
-        basis="descoteaux07"
+        fodf_basis="descoteaux07"
         fodf_metrics_a_factor=2.0
         relative_threshold=0.1
         max_fa_in_ventricle=0.1
@@ -87,7 +45,7 @@ params {
         pft_fa_seeding_mask_theshold=0.1
 
     //**PFT tracking**//
-        run_pft_tracking=true
+        run_pft_tracking=false
         pft_compress_streamlines=true
         pft_algo="prob"
         pft_seeding="npv"
@@ -128,15 +86,7 @@ params {
         local_random_seed=0
 
     //**Number of processes per tasks**//
-        processes_brain_extraction_t1=4
-        processes_denoise_dwi=4
-        processes_denoise_t1=4
-        processes_eddy=1
         processes_fodf=4
-        processes_registration=4
-
-    //**Template T1 path**//
-        template_t1="/human-data/mni_152_sym_09c/t1"
 
     //**Output directory**//
         output_dir=false
@@ -146,14 +96,12 @@ params {
 
     Mean_FRF_Publish_Dir = "./results/Mean_FRF"
     Readme_Publish_Dir = "./results/Readme"
-    Read_BIDS_Publish_Dir = "./results/Read_BIDS"
 }
 
 if(params.output_dir) {
     process.publishDir = {"$params.output_dir/$sid/$task.process"}
     params.Mean_FRF_Publish_Dir = "${params.output_dir}/Mean_FRF"
     params.Readme_Publish_Dir = "${params.output_dir}/Readme"
-    params.Read_BIDS_Publish_Dir = "${params.output_dir}/Read_BIDS"
 }
 
 if(params.processes) {
@@ -175,16 +123,10 @@ profiles {
 
     use_cuda {
         singularity.runOptions='--nv'
-        params.eddy_cmd="eddy_cuda"
     }
 
     fully_reproducible {
-        params.processes_brain_extraction_t1=1
-        params.processes_denoise_dwi=4
-        params.processes_denoise_t1=4
-        params.processes_eddy=1
         params.processes_fodf=4
-        params.processes_registration=1
     }
 
     macos {
